Vehicular (declaracion vista agente autorizado) Desarrollo inicial

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -313,6 +313,10 @@ sdh.detalle.vehiculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infoObj
 sdh.detalle.vehiculo.user=wspouser
 sdh.detalle.vehiculo.password=POw3bs3rv18
 
+sdh.detalle.vehiculo2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Vehicular2
+sdh.detalle.vehiculo2.user=wspouser
+sdh.detalle.vehiculo2.password=POw3bs3rv18
+
 #Gestion Bancaria
 #gestion.bancaria.certificados.path=/usr/sap/SDH/gestionBancaria/updatedCertificates/
 #gestion.bancaria.certificados.autoridades.path=/usr/sap/SDH/gestionBancaria/autoridades
