Se agregan cambios para Obligaciones Pendientes de contribuyente

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -340,3 +340,13 @@ sdh.calcvehiculos.password=POw3bs3rv18
 #ZWS_HYBSEND_MAIL_INT
 sdh.zwsHybSendMailInt.user=oarredondo
 sdh.zwsHybSendMailInt.password=inicio2018
+
+#Obligaciones Predial
+sdh.oblipredial.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/predial
+sdh.oblipredial.user=wspouser
+sdh.oblipredial.password=POw3bs3rv18
+
+#Obligaciones Vehicular
+sdh.oblivehicular.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/vehiculo
+sdh.oblivehicular.user=wspouser
+sdh.oblivehicular.password=POw3bs3rv18
