Se agregan primeros cambios para Predial detalle

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -350,3 +350,8 @@ sdh.oblipredial.password=POw3bs3rv18
 sdh.oblivehicular.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/vehiculo
 sdh.oblivehicular.user=wspouser
 sdh.oblivehicular.password=POw3bs3rv18
+
+#Predial DEtalle
+sdh.detpredial.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/infoPredial
+sdh.detpredial.user=wspouser
+sdh.detpredial.password=POw3bs3rv18
