Predial - Funcionalidad para pruebas (presentar declaracion, pagar en linea)

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -355,3 +355,13 @@ sdh.oblivehicular.password=POw3bs3rv18
 sdh.detpredial.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/infObjeto/infoPredial
 sdh.detpredial.user=wspouser
 sdh.detpredial.password=POw3bs3rv18
+
+#Predial - TEST
+sdh.predialTEST.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoimpuesto/TEST
+sdh.predialTEST.user=wspouser
+sdh.predialTEST.password=POw3bs3rv18
+
+
+
+
+
