Primera parte de Estado de cuenta

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -361,6 +361,11 @@ sdh.predialTEST.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoimpue
 sdh.predialTEST.user=wspouser
 sdh.predialTEST.password=POw3bs3rv18
 
+#Estado de cuenta
+sdh.edocta.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/declara/estadoCuenta
+sdh.edocta.user=wspouser
+sdh.edocta.password=POw3bs3rv18
+
 
 
 
