--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,4 @@ idea-module-files/
 gestionBancaria/updatedCertificates/31223_0722001423.zip.p7z.zip
 gestionBancaria/updatedCertificates/35375_5122001692.zip.p7z.zip
 hybris/hybris/bin/custom/sdh/sdhpsaddon/velocity.log
+gestionBancaria/
