Delineacion urbana (declaracion/retencion vista Agente Autorizado) desarrollo inicial

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -292,6 +292,10 @@ sdh.calculoICA2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/c
 sdh.calculoICA2.user=wspouser
 sdh.calculoICA2.password=POw3bs3rv18
 
+sdh.infObjetoDelineacion2.url=https://sdh-pociqas.shd.gov.co:50001/RESTAdapter/liquidador2/calculoDelineacion
+sdh.infObjetoDelineacion2.user=wspouser
+sdh.infObjetoDelineacion2.password=POw3bs3rv18
+
 sdh.oblipublicidad.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/oblig/publicidad
 sdh.oblipublicidad.user=wspouser
 sdh.oblipublicidad.password=POw3bs3rv18
