--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -320,6 +320,18 @@ sdh.detalle.vehiculo2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calcul
 sdh.detalle.vehiculo2.user=wspouser
 sdh.detalle.vehiculo2.password=POw3bs3rv18
 
+sdh.catLinea.vehiculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/consultavehicular/linea
+sdh.catLinea.vehiculo.user=wspouser
+sdh.catLinea.vehiculo.password=POw3bs3rv18
+
+sdh.catCilindraje.vehiculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/consultavehicular/cilindraje
+sdh.catCilindraje.vehiculo.user=wspouser
+sdh.catCilindraje.vehiculo.password=POw3bs3rv18
+
+sdh.catAvaluo.vehiculo.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/consultavehicular/avaluo
+sdh.catAvaluo.vehiculo.user=wspouser
+sdh.catAvaluo.vehiculo.password=POw3bs3rv18
+
 #Gestion Bancaria
 #gestion.bancaria.certificados.path=/usr/sap/SDH/gestionBancaria/updatedCertificates/
 #gestion.bancaria.certificados.autoridades.path=/usr/sap/SDH/gestionBancaria/autoridades
