--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -20,6 +20,12 @@ publicsectorservices.encoder.aes.key=d2cb415e067c7b13
 publicsectorservices.encoder.encryption.cipher=AES/CBC/PKCS5Padding
 publicsectorservices.encoder.initialization.vector=e36dc751d0433f05
 
+#Backoffice Widget customization
+backoffice.cockpitng.additionalResourceLoader.enabled=true
+backoffice.cockpitng.uifactory.cache.enabled=false 
+backoffice.cockpitng.widgetclassloader.resourcecache.enabled=false
+backoffice.cockpitng.resourceloader.resourcecache.enabled=false
+
 website.sdh.http=http://sdhdev.local:9001/sdhstorefront
 website.sdh.https=https://sdhdev.local:9002/sdhstorefront
 
@@ -374,6 +380,5 @@ sdh.edocta.password=POw3bs3rv18
 sdh.calculopredial.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Predial
 sdh.calculopredial.user=wspouser
 sdh.calculopredial.password=POw3bs3rv18
-
 
 
