--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -393,4 +393,9 @@ sdh.calculopredial.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoIm
 sdh.calculopredial.user=wspouser
 sdh.calculopredial.password=POw3bs3rv18
 
+#Predial Detalle - vista agente autorizado
+sdh.detpredial2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/Predial2
+sdh.detpredial2.user=wspouser
+sdh.detpredial2.password=POw3bs3rv18
+
 
