Predial (declaracion - bases presuntivas) desarrollo funcionalidad boton "precalculo"

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -398,4 +398,7 @@ sdh.detpredial2.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/calculoImp/P
 sdh.detpredial2.user=wspouser
 sdh.detpredial2.password=POw3bs3rv18
 
-
+#Predial Detalle -  bases presuntivas
+sdh.detpredialBP.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/basespresuntivas
+sdh.detpredialBP.user=wspouser
+sdh.detpredialBP.password=POw3bs3rv18
