Web Service - TRM PDF Extraction

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -402,3 +402,8 @@ sdh.detpredial2.password=POw3bs3rv18
 sdh.detpredialBP.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/basespresuntivas
 sdh.detpredialBP.user=wspouser
 sdh.detpredialBP.password=POw3bs3rv18
+
+#TRM Get Pdf
+sdh.trm.pdf.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/trm/reportesPDF/
+sdh.trm.pdf..user=wspouser
+sdh.trm.pdf..password=POw3bs3rv18
