--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -407,3 +407,8 @@ sdh.detpredialBP.password=POw3bs3rv18
 sdh.trm.pdf.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/trm/reportesPDF/
 sdh.trm.pdf..user=wspouser
 sdh.trm.pdf..password=POw3bs3rv18
+
+#Mibuzon
+sdh.mibuzon.tributario.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/buzonTributario/
+sdh.mibuzon.tributario.user=wspouser
+sdh.mibuzon.tributario.password=POw3bs3rv18
