Terceros Notario Buscar - Web service table

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -412,3 +412,8 @@ sdh.trm.pdf..password=POw3bs3rv18
 sdh.mibuzon.tributario.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/buzonTributario/
 sdh.mibuzon.tributario.user=wspouser
 sdh.mibuzon.tributario.password=POw3bs3rv18
+
+#TercerosAut
+sdh.tercerosAut.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/trm/tercerosAut/
+sdh.tercerosAut.user=wspouser
+sdh.tercerosAut.password=POw3bs3rv18
