Descarga factura - Funcionalidad inicial para descargar factura

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -417,3 +417,9 @@ sdh.mibuzon.tributario.password=POw3bs3rv18
 sdh.tercerosAut.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/trm/tercerosAut/
 sdh.tercerosAut.user=wspouser
 sdh.tercerosAut.password=POw3bs3rv18
+
+#Descarga factura
+sdh.facturacion.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/trm/facturacion
+sdh.facturacion.user=wspouser
+sdh.facturacion.password=POw3bs3rv18
+
