SDH - Crear Agente Autorizado - WS Implementation

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -423,3 +423,18 @@ sdh.facturacion.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/trm/facturac
 sdh.facturacion.user=wspouser
 sdh.facturacion.password=POw3bs3rv18
 
+#Agente Autorizado BP
+sdh.agentesAutBP.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/agentesAutBP/
+sdh.agentesAutBP.user=wspouser
+sdh.agentesAutBP.password=POw3bs3rv18
+
+#Agente Autorizado BP - Calidades
+sdh.agentesAutBP.calidades.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/agentesAutCalidades/
+sdh.agentesAutBP.calidades.user=wspouser
+sdh.agentesAutBP.calidades.password=POw3bs3rv18
+
+#Agente Autorizado BP - Crear caso
+sdh.agentesAutBP.createCase.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/crm/agentesAutImpuestos/
+sdh.agentesAutBP.createCase.user=wspouser
+sdh.agentesAutBP.createCase.password=POw3bs3rv18
+
