Se agregan cambios para funcionalidad SPAC

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -438,3 +438,14 @@ sdh.agentesAutBP.createCase.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/
 sdh.agentesAutBP.createCase.user=wspouser
 sdh.agentesAutBP.createCase.password=POw3bs3rv18
 
+#Consumo de SPAC
+sdh.spac.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/trm/spac/
+sdh.spac.user=wspouser
+sdh.spac.password=POw3bs3rv18
+
+#Consumo de SPAC PDF
+sdh.spac.pdf.url=https://sdhcipodev.shd.gov.co:50101/RESTAdapter/trm/spac/
+sdh.spac.pdf.user=wspouser
+sdh.spac.pdf.password=POw3bs3rv18
+
+
