Ajuste en URL, ya no aparece /sdhstorefront

--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
@@ -72,8 +72,8 @@ mediafilter.response.header.Cache-Control=public,max-age=31536000
 # them in your config/local.properties file rather than changing the value here.
 # If you want to remap the the context path to the root site on the web container
 # then you must set these values to be blank, do not set them to be '/'
-sdhstorefront.webroot=/sdhstorefront
-storefrontContextRoot=/sdhstorefront
+sdhstorefront.webroot=
+storefrontContextRoot=
 
 
 ###########
