Ajuste 2 para proxy server

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -567,6 +567,15 @@ sdh.pse.notifPago.urlhttp:https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/ge
 sdh.pse.notifPago.user=wspouser
 sdh.pse.notifPago.password=PodBogda1ados20*
 
+
+####################################################################
+##############Proxy server configuration############################
+sdh.pse.http.proxyHost=186.31.132.21
+sdh.pse.http.proxyPort=3128
+sdh.pse.https.proxyHost=186.31.132.21
+sdh.pse.https.proxyPort=3128
+
+
 ####################################################################
 ########## PSE configuration attributes ############################
 sdh.pse.pseURL=http://200.1.124.65/PSEWebServices3/MainServices.asmx
@@ -581,6 +590,7 @@ sdh.pse.companyAuthCode=0123
 sdh.pse.messageHeader.to=ToMessage
 sdh.pse.messageHeader.from=FromMessage
 sdh.pse.messageHeader.representingParty=RepresentingPartyMessage
+
 
 ####################################################################
 ##############Credibanco############################################
