--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -574,6 +574,8 @@ sdh.pse.http.proxyHost=186.31.132.21
 sdh.pse.http.proxyPort=3128
 sdh.pse.https.proxyHost=186.31.132.21
 sdh.pse.https.proxyPort=3128
+sdh.pse.http.nonProxyHosts=*vhshdpotci.hec.shd.gov.co*|*vhshdpodci.hec.shd.gov.co*
+
 
 
 ####################################################################
@@ -594,8 +596,8 @@ sdh.pse.messageHeader.representingParty=RepresentingPartyMessage
 
 ####################################################################
 ##############Credibanco############################################
-credibanco.credential.privateKey.path=/opt/hybris/bin/custom/sdh/sdhcore/resources/credibanco/rsa-private.pem
-credibanco.credential.publicKey.path=/opt/hybris/bin/custom/sdh/sdhcore/resources/credibanco/rsa-public.pem
+credibanco.credential.privateKey.path=C:\\SDH\\hybris\\hybris\\bin\\custom\\sdh\\sdhcore\\resources\\credibanco\\rsa-private.pem
+credibanco.credential.publicKey.path=C:\\SDH\\hybris\\hybris\\bin\\custom\\sdh\\sdhcore\\resources\\credibanco\\rsa-public.pem
 credibanco.credential.webService.inititalizeTransaction.url=https://172.27.1.47:8022/Tilacino/api/sdh/initializeTransaction
 credibanco.credential.webService.resultTransaction.url=https://172.27.1.47:8022/Tilacino/api/sdh/getResultTransaction
 credibanco.response.url=https://devnuevaoficinavirtual.shd.gov.co/bogota/es/impuestos/pagoEnLinea/credibancoResponse
