Ajuste 2 para proxy server

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -570,13 +570,18 @@ sdh.pse.notifPago.password=PodBogda1ados20*
 
 ####################################################################
 ##############Proxy server configuration############################
-sdh.pse.http.proxyHost=186.31.132.21
-sdh.pse.http.proxyPort=3128
-sdh.pse.https.proxyHost=186.31.132.21
-sdh.pse.https.proxyPort=3128
-sdh.pse.http.nonProxyHosts=*vhshdpotci.hec.shd.gov.co*|*vhshdpodci.hec.shd.gov.co*
+sdh.pse.http.proxyHost_1=147.204.152.42
+sdh.pse.http.proxyPort_1=3128
+sdh.pse.https.proxyHost_1=147.204.152.42
+sdh.pse.https.proxyPort_1=3128
+sdh.pse.http.nonProxyHosts_1=null
 
 
+sdh.pse.http.proxyHost_2=186.31.132.21
+sdh.pse.http.proxyPort_2=3128
+sdh.pse.https.proxyHost_2=186.31.132.21
+sdh.pse.https.proxyPort_2=3128
+sdh.pse.http.nonProxyHosts_2=null
 
 ####################################################################
 ########## PSE configuration attributes ############################
