Adding log into storefront to investigate the intermittent time out error

--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
@@ -343,3 +343,5 @@ refresh.uploading.saved.cart.interval=5000
 ##########
 # number of comments to show initially (integer)
 quote.pagination.numberofcomments=4
+
+storefrontAMSRequestSpringLogFilter.executionThreshold=10
