Ajuste 4 para pruebas de comunicacion  SDH - ACH

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -576,7 +576,7 @@ sdh.pse.http.proxyHostInternet=147.204.152.42
 sdh.pse.http.proxyPortInternet=3128
 
 sdh.pse.http.configuracion=3
-sdh.pse.http.proxy.type=SOCKS
+sdh.pse.http.proxy.type=HTTP
 
 
 
