Se agregan cambios para Obligaciones Pendientes RETEICA

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -558,6 +558,12 @@ sdh.agentesAutBP.createCase.user=wspouser
 sdh.agentesAutBP.createCase.password=PodBogda1ados20*
 
 ####################################################################
+############ Obligaciones pedientes RETEICA ########################
+sdh.reteIca.obliPendientes.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/oblig/reteica/
+sdh.reteIca.obliPendientes.user=wspouser
+sdh.reteIca.obliPendientes.password=PodBogda1ados20*
+
+####################################################################
 ########## Servicios de pago en línea###############################
 ####################################################################
 
@@ -625,5 +631,6 @@ mail.smtp.starttls.enable=true
 ############ Recaptcha #############################################
 recaptcha.publickey=6LfScpsUAAAAAAj5viBRYbyFdNAbOEnALED9nAmd
 recaptcha.privatekey=6LfScpsUAAAAAGxNGH8El8lFJRg0_e7vSXsDFznz
+
 
 
