Finalize PSE/ACH Transaction When Status  Code Equals To Value In Property -> sdh.pse.finalizeTransaction.whenTransactionStateIs

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -600,6 +600,7 @@ sdh.pse.companyAuthCode=0123
 sdh.pse.messageHeader.to=ToMessage
 sdh.pse.messageHeader.from=FromMessage
 sdh.pse.messageHeader.representingParty=RepresentingPartyMessage
+sdh.pse.finalizeTransaction.whenTransactionStateIs=AnyStatusCode
 
 
 ####################################################################
