Ajustes para cache

--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
@@ -52,8 +52,8 @@ csrf.allowed.url.patterns=/[^/]+(/[^?]*)+(sop/response)$,/[^/]+(/[^?]*)+(merchan
 # after which the client will check if the resource has changed using the
 # resource's ETAG. This is required as the resource file contents could change
 # without the URL changing.
-#storefront.staticResourceFilter.response.header.Cache-Control=public,max-age=600
-storefront.staticResourceFilter.response.header.Cache-Control=no-cache,must-revalidate
+storefront.staticResourceFilter.response.header.Cache-Control=public,max-age=600
+#storefront.staticResourceFilter.response.header.Cache-Control=no-cache,must-revalidate
 
 
 # Enable media client side caching for 1 year. This is fine because the media
