--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -15,6 +15,8 @@
 #db.username=SYSTEM
 #db.password=Sdh_2018
 
+lang.packs=en,es
+
 ####################################################################
 ########### System ID ##############################################
 ####################################################################
