Revert "Ajuste project properties para comprimir css y js"
This reverts commit ef626d19382d3ab4a563bfad9a4433212d66679a.

--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/project.properties
@@ -266,7 +266,7 @@ storefront.show.checkout.flows=true
 # CSS and JS files compression into one using wro4j project 
 # (https://github.com/wro4j/wro4j) is disabled by default.
 # Here you can enable it on site/frontend level
-storefront.wro4j.enabled=true
+storefront.wro4j.enabled=false
 #Definition of which countries regions should be attached to the address
 resolve.country.regions=US,CA
 
