local enviroment inrpovement

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -16,6 +16,7 @@
 #db.password=Sdh_2018
 
 lang.packs=en,es
+addonfilter.active=false
 
 ####################################################################
 ########### System ID ##############################################
