Ajsutes para finalizar session por inactividad

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -29,6 +29,11 @@ regioncache.cmsregion.ttl=3600
 
 tomcat.ajp.secureport=8009
 
+#####################################################################
+##### --- Idle Timeout in minutes            --- ####################
+#####################################################################
+sdhstorefront.idle.timeout=2
+
 ####################################################################
 ##### --- Database settings for Sap Hana db --- ####################
 #####################################################################
