Agregar propiedad sdhstorefront.idle.timeout

--- a/hybris/hybris/config-dev/local.properties
+++ b/hybris/hybris/config-dev/local.properties
@@ -46,6 +46,11 @@ tomcat.ajp.secureport=8009
 ####################################################################
 license.sap.sapsystem=HYD
 
+#####################################################################
+##### --- Idle Timeout in minutes            --- ####################
+#####################################################################
+sdhstorefront.idle.timeout=2
+
 ####################################################################
 ########### Timeout ################################################
 ####################################################################
@@ -562,7 +567,7 @@ import.p7z.max.upload.size.bytes=102400
 ####################################################################
 ######### Buzon Tributario #########################################
 ####################################################################
-sdh.mibuzon.tributario.url=https://vhshdpodci.hec.shd.gov.co:50001/RESTAdapter/crm/buzonTributario/
+sdh.mibuzon.tributario.url=https://vhshdwpdwd01.hec.shd.gov.co:44330/RESTAdapter/crm/buzonTributario/
 sdh.mibuzon.tributario.user=wspouser
 sdh.mibuzon.tributario.password=PodBogda1ados20*
 
@@ -638,19 +643,6 @@ sdh.pse.http.proxyPortInternet=3128
 
 sdh.pse.http.configuracion=4
 sdh.pse.http.proxy.type=HTTP
-
-####################################################################
-############# Configuracion salida mail ############################
-mail.from=jair.r04@gmail.com
-mail.replyto=jair.r04@gmail.com
-mail.smtp.server=smtp.googlemail.com
-mail.smtp.port=587
-mail.smtp.auth=true
-mail.smtp.debug=true
-mail.smtp.user=jair.r04@gmail.com
-mail.smtp.password=qecyfbujgqkpnvih
-mail.use.tls=true
-mail.smtp.starttls.enable=true
 
 ####################################################################
 ############ Recaptcha #############################################
