--- a/hybris/hybris/config-local/local.properties
+++ b/hybris/hybris/config-local/local.properties
@@ -42,6 +42,11 @@ tomcat.ajp.secureport=8009
 ####################################################################
 license.sap.sapsystem=HYD
 
+#####################################################################
+##### --- Idle Timeout in minutes            --- ####################
+#####################################################################
+sdhstorefront.idle.timeout=2
+
 ####################################################################
 ########### Timeout ################################################
 ####################################################################
