--- a/hybris/hybris/config-prd/local.properties
+++ b/hybris/hybris/config-prd/local.properties
@@ -11,6 +11,8 @@ hybris.optional.config.dir=/opt/hybris/config/opt_config
 ############### Parametros #########################################
 ####################################################################
 addonfilter.active=false
+lang.packs=en,es
+
 storefront.resourceBundle.cacheSeconds=-1
 tenant.restart.on.connection.error=false
 
@@ -45,6 +47,11 @@ importmanager.default.password=
 importcockpit.default.login=
 #hac.default.login=
 #hac.default.password=
+
+#####################################################################
+##### --- Idle Timeout in minutes            --- ####################
+#####################################################################
+sdhstorefront.idle.timeout=2
 
 ###iecisa
 #installed.tenants=
@@ -672,19 +679,6 @@ credibanco.sdh.isoCodeCurrency=COP
 
 #sdh.pse.http.configuracion=4
 #sdh.pse.http.proxy.type=HTTP
-
-####################################################################
-#############Configuracion salida mail #############################
-mail.from=jair.r04@gmail.com
-mail.replyto=jair.r04@gmail.com
-mail.smtp.server=smtp.googlemail.com
-mail.smtp.port=587
-mail.smtp.auth=true
-mail.smtp.debug=true
-mail.smtp.user=jair.r04@gmail.com
-mail.smtp.password=qecyfbujgqkpnvih
-mail.use.tls=true
-mail.smtp.starttls.enable=true
 
 ####################################################################
 ############ Recaptcha #############################################
