--- a/hybris/hybris/config-stg/local.properties
+++ b/hybris/hybris/config-stg/local.properties
@@ -44,6 +44,11 @@ tomcat.ajp.secureport=8009
 ####################################################################
 license.sap.sapsystem=HYQ 
 
+#####################################################################
+##### --- Idle Timeout in minutes            --- ####################
+#####################################################################
+sdhstorefront.idle.timeout=2
+
 ####################################################################
 ########### Timeout ################################################
 ####################################################################
