--- a/hybris/hybris/config-dev/local.properties
+++ b/hybris/hybris/config-dev/local.properties
@@ -658,3 +658,5 @@ recaptcha.publickey=6LfScpsUAAAAAAj5viBRYbyFdNAbOEnALED9nAmd
 recaptcha.privatekey=6LfScpsUAAAAAGxNGH8El8lFJRg0_e7vSXsDFznz
 
 
+#Maintenance view redirection
+webapps.redirection.url=/bogota/serverMaintenance.jsp
