--- a/hybris/hybris/config-prd/local.properties
+++ b/hybris/hybris/config-prd/local.properties
@@ -727,3 +727,6 @@ proxy.ssl.port=443
 # By default the content of jmxremote.password defined in config/tomcat/conf ist used.
 #tomcat.jmx.port=9003
 #tomcat.jmx.server.port=9004
+
+#Maintenance view redirection
+webapps.redirection.url=/bogota/serverMaintenance.jsp
