--- a/hybris/hybris/config-dev/local.properties
+++ b/hybris/hybris/config-dev/local.properties
@@ -49,7 +49,7 @@ license.sap.sapsystem=HYD
 #####################################################################
 ##### --- Idle Timeout in minutes            --- ####################
 #####################################################################
-sdhstorefront.idle.timeout=2
+sdhstorefront.idle.timeout=10
 
 ####################################################################
 ########### Timeout ################################################
@@ -649,6 +649,8 @@ sdh.pse.http.proxy.type=HTTP
 recaptcha.publickey=6LfScpsUAAAAAAj5viBRYbyFdNAbOEnALED9nAmd
 recaptcha.privatekey=6LfScpsUAAAAAGxNGH8El8lFJRg0_e7vSXsDFznz
 
-
-#Maintenance view redirection
+####################################################################
+#############Maintenance view redirection ##########################
 webapps.redirection.url=/bogota/serverMaintenance.jsp
+
+
