--- a/hybris/hybris/config-prd/local.properties
+++ b/hybris/hybris/config-prd/local.properties
@@ -51,7 +51,7 @@ importcockpit.default.login=
 #####################################################################
 ##### --- Idle Timeout in minutes            --- ####################
 #####################################################################
-sdhstorefront.idle.timeout=2
+sdhstorefront.idle.timeout=10
 
 ###iecisa
 #installed.tenants=
@@ -681,6 +681,10 @@ credibanco.sdh.isoCodeCurrency=COP
 #sdh.pse.http.proxy.type=HTTP
 
 ####################################################################
+#############Maintenance view redirection ##########################
+webapps.redirection.url=/bogota/serverMaintenance.jsp
+
+####################################################################
 ############ Recaptcha #############################################
 recaptcha.publickey=6LdZIr8UAAAAANi3mhu9EJxnFoCWDIC_eHR9feeM
 recaptcha.privatekey=6LdZIr8UAAAAAKec4GjCVMRUaYgRZ5yvl7R5Yldl
@@ -721,6 +725,3 @@ proxy.ssl.port=443
 # By default the content of jmxremote.password defined in config/tomcat/conf ist used.
 #tomcat.jmx.port=9003
 #tomcat.jmx.server.port=9004
-
-#Maintenance view redirection
-webapps.redirection.url=/bogota/serverMaintenance.jsp
