--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -11,6 +11,8 @@ hybris.optional.config.dir=/opt/hybris/config/opt_config
 ############### Parametros #########################################
 ####################################################################
 addonfilter.active=false
+lang.packs=en,es
+
 storefront.resourceBundle.cacheSecond=1
 tenant.restart.on.connection.error=false
 task.engine.loadonstartup=true
@@ -29,11 +31,6 @@ regioncache.cmsregion.ttl=3600
 
 tomcat.ajp.secureport=8009
 
-#####################################################################
-##### --- Idle Timeout in minutes            --- ####################
-#####################################################################
-sdhstorefront.idle.timeout=10
-
 ####################################################################
 ##### --- Database settings for Sap Hana db --- ####################
 #####################################################################
@@ -46,6 +43,11 @@ sdhstorefront.idle.timeout=10
 ########### System ID ##############################################
 ####################################################################
 license.sap.sapsystem=HYQ 
+
+#####################################################################
+##### --- Idle Timeout in minutes            --- ####################
+#####################################################################
+sdhstorefront.idle.timeout=10
 
 ####################################################################
 ########### Timeout ################################################
@@ -527,19 +529,19 @@ sdh.reteIca.obliPendientes.password=POw3bs3rv18
 
 ###################################################################
 ######## Crea casos en CRM ########################################
-sdh.creaCasos.url:https://vhshdpotci.hec.shd.gov.co:50001/RESTAdapter/crm/creaCasos/ 
+sdh.creaCasos.url:https://vhshdwpqwd01.hec.shd.gov.co:44330/RESTAdapter/crm/creaCasos/ 
 sdh.creaCasos.user=wspouser
 sdh.creaCasos.password=POw3bs3rv18
 
 ####################################################################
 ######## Despliega los documentos a adjuntar por trámite ###########
-sdh.docTramites.url:https://vhshdpotci.hec.shd.gov.co:50001/RESTAdapter/crm/docTramites/
+sdh.docTramites.url:https://vhshdwpqwd01.hec.shd.gov.co:44330/RESTAdapter/crm/docTramites/
 sdh.docTramites.user=wspouser
 sdh.docTramites.password=POw3bs3rv18
 
 ####################################################################
 ######## Consulta de trámites creados ##############################
-sdh.consCasos.url:https://vhshdpotci.hec.shd.gov.co:50001/RESTAdapter/crm/consCasos/
+sdh.consCasos.url:https://vhshdwpqwd01.hec.shd.gov.co:44330/RESTAdapter/crm/consCasos/
 sdh.consCasos.user=wspouser
 sdh.consCasos.password=POw3bs3rv18
 
@@ -579,7 +581,7 @@ import.p7z.max.upload.size.bytes=10240
 ####################################################################
 ######### Buzon Tributario #########################################
 ####################################################################
-sdh.mibuzon.tributario.url=https://vhshdpotci.hec.shd.gov.co:50001/RESTAdapter/crm/buzonTributario/
+sdh.mibuzon.tributario.url=https://vhshdwpqwd01.hec.shd.gov.co:44330/RESTAdapter/crm/buzonTributario/
 sdh.mibuzon.tributario.user=wspouser
 sdh.mibuzon.tributario.password=POw3bs3rv18
 
@@ -665,17 +667,8 @@ sdh.pse.http.proxy.type=HTTP
 #sdh.pse.http.nonProxyHosts_2=null
 
 ####################################################################
-#############Configuracion salida mail #############################
-mail.from=jair.r04@gmail.com
-mail.replyto=jair.r04@gmail.com
-mail.smtp.server=smtp.googlemail.com
-mail.smtp.port=587
-mail.smtp.auth=true
-mail.smtp.debug=true
-mail.smtp.user=jair.r04@gmail.com
-mail.smtp.password=qecyfbujgqkpnvih
-mail.use.tls=true
-mail.smtp.starttls.enable=true
+#############Maintenance view redirection ##########################
+webapps.redirection.url=/bogota/serverMaintenance.jsp
 
 ####################################################################
 ############ Recaptcha #############################################
@@ -718,6 +711,3 @@ proxy.ssl.port=443
 # By default the content of jmxremote.password defined in config/tomcat/conf ist used.
 #tomcat.jmx.port=9003
 #tomcat.jmx.server.port=9004
-
-#Maintenance view redirection
-webapps.redirection.url=/bogota/serverMaintenance.jsp
