Ajustes para deplegar el certificado de pago en la pagina de formulario de pago exitoso.

--- a/hybris/hybris/config/local.properties
+++ b/hybris/hybris/config/local.properties
@@ -30,10 +30,11 @@ tenant.restart.on.connection.error=false
 system.unlocking.disabled=true
 
 installed.tenants=
-build.development.mode=false
-tomcat.development.mode=false
+build.development.mode=true
+tomcat.development.mode=true
 storefront.staticResourceFilter.response.header.Cache-Control=public,max-age=86400
-storefront.wro4j.enabled=true
+storefront.wro4j.enabled=false
+
 
 #Enabling CMS Caching (default: false)
 #cms.cache.enabled=true
